{
    "name": "BirdInputActions",
    "maps": [
        {
            "name": "BirdActionMaps",
            "id": "3c2e36e2-60fe-4200-a96d-721ad42ecd12",
            "actions": [
                {
                    "name": "MoveForwardSide",
                    "type": "Value",
                    "id": "c310990a-9a13-4f7f-97f1-e1e765767306",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveUpDown",
                    "type": "Value",
                    "id": "addf4e13-52b6-44ac-a225-8c51a1c829a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "104d90f0-6d72-484b-8cb2-33073aca2a6b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0046db53-c6e2-4322-b9ef-bb33a6ac208d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a5b8e717-14aa-48c4-b013-b20907fe1bd9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6c47b67c-2d1a-4afc-80c1-3ac0e37b7a60",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "090d8d66-f043-4784-bc68-52ca64ba9a78",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "552792e5-4fc0-4895-bdfa-4790b3634395",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e8ca33e-6b6d-4237-821c-4292310a7b5e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}